--- a/app/partials/request-init.html
+++ b/app/partials/request-init.html
@@ -2,12 +2,12 @@
   <div class="row">
     <div class="col-lg-4">
       <p>
-        welcome
-      </p>
+        Complete this wizard to get an evaluation of your studio.
+      </br>Once completed we will send you the results within the next 2-3 days. The price for one evaluation is 50$</p>
       <p>
-        <button class="btn btn-primary" ng-click="initRequest()">Create LF Simulation Request</button>
+        <button class="btn btn-primary" ng-click="initRequest()">Get Started</button>
       </p>
-      <p>
+     <!--  <p>
         <a ui-sref="requestList()"><button class="btn btn-primary">Request List</button></a>
       </p>
       <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
@@ -15,7 +15,7 @@
 <input type="hidden" name="hosted_button_id" value="M87QWDN6GFHY2">
 <input type="image" src="https://www.paypalobjects.com/en_US/CH/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-</form>
+</form> -->
 
     </div>
   </div>
