--- a/app/partials/request-step-layout.html
+++ b/app/partials/request-step-layout.html
@@ -14,7 +14,7 @@
           
               <div class="form-group">
                 <label>Room Height:</label>
-                <input style="width:100px" name="h" class="form-control" type="number" ng-model="model.roomheight" min="0" placeholder="height in cm" required>
+                <input style="width:100px" name="h" class="form-control" type="number" ng-model="model.roomheight" min="0" required>
                 <span class="error" ng-show="fheight.$dirty && fheight.h.$error.required">required!</span>
               </div>
             </form>
