--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -29,10 +29,11 @@
 </div>
 
 
-<div class="container">
+<div class="container white">
 	<div class="row">
 		<div class="col-lg-12">
 			<div class="col-md-4">
+				<a ui-sref="theory()">
 				<div class="box-bg">
 					<!-- <div class="wow bounceInLeft" data-wow-duration="2s" data-wow-delay="0.9s"> -->
 						<div class="align-center">
@@ -42,6 +43,7 @@
 						</div>
 					<!-- </div> -->
 				</div>
+				</a>
 			</div>
 
 			<div class="col-md-4">
@@ -56,6 +58,7 @@
 				</div>
 			</div>
 			<div class="col-md-4">
+				<a ui-sref="requestInit()">
 				<div class="box-bg">
 					<!-- <div class="wow bounceInLeft" data-wow-duration="2s" data-wow-delay="0.9s"> -->
 						<div class="align-center">
@@ -65,6 +68,7 @@
 						</div>
 					<!-- </div> -->
 				</div>
+			</a>
 			</div>
 		</div>
 	</div>
