--- a/app/partials/request-init.html
+++ b/app/partials/request-init.html
@@ -1,22 +1,21 @@
-<div id="foo" class="container-fluid">
+<div class="container white">
   <div class="row">
-    <div class="col-lg-4">
-      <p>
+    <div class="col-lg-12">
+      <div class="col-md-4">
+        <div class="box-bg">
+            <div class="align-center">
+              <i class="fa fa-book fa-5x"></i>
+              <h4 class="text-bold">Analyze</h4>
+                    <p>
         Complete this wizard to get an evaluation of your studio.
       </br>Once completed we will send you the results within the next 2-3 days. The price for one evaluation is 50$</p>
       <p>
         <button class="btn btn-primary" ng-click="initRequest()">Get Started</button>
       </p>
-     <!--  <p>
-        <a ui-sref="requestList()"><button class="btn btn-primary">Request List</button></a>
-      </p>
-      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="M87QWDN6GFHY2">
-<input type="image" src="https://www.paypalobjects.com/en_US/CH/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-</form> -->
-
+            </div>
+        </div>
+        </a>
+      </div>
     </div>
   </div>
 </div>
