--- a/app/css/style.css
+++ b/app/css/style.css
@@ -15,7 +15,7 @@ body {
 	font-size:14px;
 	font-weight:300;
 	line-height:1.6em;
-	color: #656565;
+	color: #fff;
 	overflow-x:hidden;
 	}
 
@@ -28,12 +28,12 @@ body {
 }
  
 p {
-	color: #656565;
+	color: #fff;
 	font-family:'Open Sans', Arial, sans-serif;
 	font-weight:300;
 }
  h1,h2, h3, h4, h5, h6 {
-	font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 	font-weight:500;
 	line-height:1.1em;
 	color: #FFF4F4;
@@ -44,24 +44,72 @@ p {
 	color: white;
 }
 
-.panel-primary {
-background-color: #B17676;
-border-color: #B17676;
-border-top-left-radius: 0px;
-border-top-right-radius: 0px;
-}
-.panel-primary>.panel-heading {
-background-color: #B17676;
-border-color: #B17676;
-border-top-left-radius: 0px;
-border-top-right-radius: 0px;
+label {
+	color: white;
 }
 
+table {
+    /* background-color: rgba(0, 0, 0, 0.33); */
+}
+
+.panel {
+    border: 1px solid black;
+    background-color: rgba(0,0,0,0.5);
+ }
+
+ /*.panel-body {
+    background-color: rgba(0,0,0,0.5);
+}*/
+
+.panel-primary {
+    border-color: #000000;
+}
+
+.panel-primary>.panel-heading {
+	background-color: #000000; 
+border-top-left-radius: 0px;
+border-top-right-radius: 0px;
+    border-bottom: 0px solid rgb(255, 255, 255);
+}
+
+.panel-footer {
+    background-color: rgba(0, 0, 0, 1);
+    border-top: 0px solid #ddd;
+}
+
+.btn-primary {
+    color: #000;
+    background-color: #fff;
+    border-color: #ffffff;
+}
+
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open>.dropdown-toggle.btn-primary {
+    color: #000;
+    background-color: #ccc;
+    border-color: #fff;
+}
+
+.btn-primary.disabled, .btn-primary[disabled], fieldset[disabled] .btn-primary, .btn-primary.disabled:hover, .btn-primary[disabled]:hover, fieldset[disabled] .btn-primary:hover, .btn-primary.disabled:focus, .btn-primary[disabled]:focus, fieldset[disabled] .btn-primary:focus, .btn-primary.disabled:active, .btn-primary[disabled]:active, fieldset[disabled] .btn-primary:active, .btn-primary.disabled.active, .btn-primary[disabled].active, fieldset[disabled] .btn-primary.active {
+    background-color: #e6e6e6;
+    border-color: #cccccc;
+}
+
+.btn-default {
+    color: #fff;
+    background-color: #000;
+    border-color: #fff;
+}
+
+.btn-default:hover, .btn-default:focus, .btn-default:active, .btn-default.active, .open>.dropdown-toggle.btn-default {
+    color: #fff;
+    background-color: #666;
+    border-color: #fff;
+}
 /*===========================
   --- Header & menu ----
 =========================== */
 .main-menu {
-	background-color:#242424;	
+	background-color: #000;
 }
 
 .dropdown ul.nav li a {
@@ -70,8 +118,8 @@ border-top-right-radius: 0px;
 }
 
 .dropdown ul.nav li a:hover {
-	color:#428bca;
-
+	 color:#000; 
+	 background-color: #ccc;
 }
 
 h1 a.navbar-brand {
@@ -83,9 +131,10 @@ h1 a.navbar-brand {
 	margin-top:-10px;
 }
 
-span {
-	color:#428bca;
+a:hover, a:focus {
+	text-decoration: none;
 }
+
 .nav-pills  {
     float: right;
 	font-weight:800;
@@ -93,12 +142,13 @@ span {
 }
 ul.nav-pills  {
 	margin-top:10px;
-	color:fff;
+	color:#fff;
 	padding:5px;
 }
 
 .nav-pills > li > a {
-  border-radius: 0px;
+  border-radius: 3px;
+  background-color: #000;
 }
 .nav-pills > li + li {
   margin-left: 7px;
@@ -107,14 +157,14 @@ ul.nav-pills  {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #fff;
-  background-color: #EEE;
+  background-color: #ccc;
 }
-.nav-pills > li.active > a{
+.nav-pills > li.active > a {
 	background-color: #428bca;
 }
 
-.nav-pills > li.active > a:focus {
-	background-color: #000;
+.nav-pills > li.active > a:active {
+	background-color: #ccc;
 }
 
 
@@ -145,9 +195,12 @@ ul.nav-pills  {
 }	
 
 .box-bg {
-	margin-bottom:80px;
-	/* background-color: white; */
-	padding: 5px;
+    margin-bottom: 80px;
+    background-color: rgba(0, 0, 0, 0.66);
+    border-radius: 10px;
+    padding: 15px;
+    min-height: 220px;
+    color: white;
 }
 
 .thumbnail {
