--- a/app/css/style.css
+++ b/app/css/style.css
@@ -48,18 +48,10 @@ label {
 	color: white;
 }
 
-table {
-    /* background-color: rgba(0, 0, 0, 0.33); */
-}
-
 .panel {
     border: 1px solid black;
     background-color: rgba(0,0,0,0.5);
  }
-
- /*.panel-body {
-    background-color: rgba(0,0,0,0.5);
-}*/
 
 .panel-primary {
     border-color: #000000;
@@ -122,6 +114,12 @@ border-top-right-radius: 0px;
 	 background-color: #ccc;
 }
 
+.dropdown ul.nav li a:focus {
+	 color:#000; 
+	 background-color: #ccc;
+}
+
+
 h1 a.navbar-brand {
 	font-size: 25px;
 	color: #fff;
@@ -156,14 +154,16 @@ ul.nav-pills  {
 .nav-pills > li.active > a,
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
-  color: #fff;
+  color: #000;
   background-color: #ccc;
 }
 .nav-pills > li.active > a {
+	color: #0f0;
 	background-color: #428bca;
 }
 
 .nav-pills > li.active > a:active {
+	color: #000;
 	background-color: #ccc;
 }
 
