--- a/app/partials/lfs-layout.html
+++ b/app/partials/lfs-layout.html
@@ -1,3 +1,6 @@
+
+<div class="box-bg white">
+
 <div ng-attr-style={{layoutStyle}}>
   <svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg">
     
@@ -22,4 +25,6 @@
     <circle ng-if="model.receiver" ng-attr-cx="{{model.receiver.xValue}}" ng-attr-cy="{{model.receiver.yValue}}" 
             r="5" stroke="blue" stroke-width="2" fill="none" ng-attr-transform="translate(5, {{yMax+20-5}}) scale(1,-1)"/>
   </svg>
+</div>
+
 </div>
