--- a/app/partials/request-detail-full.html
+++ b/app/partials/request-detail-full.html
@@ -3,7 +3,7 @@
     <div class="col-lg-12">
       <div class="panel panel-primary">
         <div class="panel-heading">
-          <h3 class="panel-title">Request detail</h3>
+          <h3 class="panel-title">Request detail - Admin</h3>
         </div>
         <div class="panel-body">
           <lfs-cmd></lfs-cmd> 
@@ -12,9 +12,9 @@
         <lfs-request-detail request="request"></lfs-request-detail>
         
         <div class="panel-footer">
-          <a ui-sref="home()"><span style="text-align: left;">
+          <a href="#/requestList"><span style="text-align: left;">
             <button type="button" class="btn btn-default">
-              <span class="glyphicon glyphicon-chevron-left"></span> Home
+              <span class="glyphicon glyphicon-chevron-left"></span> Back
             </button>
           </span>
           </a>
